--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>Hello,WORLD!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>ページタイトル</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+  </body>
+</html>
