--- a/tags.html
+++ b/tags.html
@@ -25,6 +25,7 @@
         <tr>
           <th>HTMLタグ</th>
           <th>タグ名</th>
+          <th>記述例</th>
           <th>目的</th>
         </tr>
         <tr>
@@ -74,6 +75,37 @@
           <td>テキストを軽く強調する</td>
           <td><code>技術の成熟(&lt;em&gt;technical sophistication&lt;/em&gt;)</code></td>
           <td>技術の成熟（<em>technical sophistication</em>）</td>
+        </tr>
+        <tr>
+          <td><code>strong</code></td>
+          <td>強調(strong)</td>
+          <td>テキストを強調する</td>
+          <td>
+            <code>&lt;strong&gt;少なくとも10億人&lt;/strong&gt;</code>
+          </td>
+          <td>（自分で埋めてください）</td>
+        </tr>
+        <tr>
+          <td><code>a</code></td>
+          <td>アンカー（anchor）</td>
+          <td>ハイパーリンクにする</td>
+          <td>
+            <code>
+              &lt;a href="https://leanenough.com/"&gt:Learn Enough&lt;/a&gt;
+            </code>
+          </td>
+          <td>（自分で埋めてください）</td>
+        </tr>
+        <tr>
+          <td><code>img</code></td>
+          <td>画像(image)</td>
+          <td>画像を配置する</td>
+          <td>
+            <code>
+              &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
+            </code>
+          </td>
+          <td>（自分で埋めてください）</td>
         </tr>
       </table>
   </body>
