--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <title>Railsチュートリアル「HTML編」</title>
     <meta charset="utf-8">
   </head>
   <body>
+    <div>
+      <a href="index.html">homeページ</a>
+      <a href="moby_dick.html">読書案内『Moby_Dick』</a>
+      <a href="tags.html">HTMLタグ一覧</a>
+    </div>
     <h1>Learn Enoughのあらまし</h1>
       <p>
-        『Learn Enough to Be Dangerous』は、技術の成熟（<em>technical sophistication</em>）を世に広める
-        運動のリーダーです。技術の成熟とは、コマンドを魔法のように操ってコンピュータを自在に使いこなす
-        スキルのことです。技術の成熟には、コマンドライン、コーディング、キーボードショートカットの推測、
-        エラーメッセージのググり方、行き詰まったら再起動すべきかどうかの判断など、あらゆるスキルが含まれ
-        ます。技術の成熟を身につければ、全世界で<strong><em>少なくとも10億人</em></strong>が計り知れない恩恵を受けられると私たちは
-        確信しています。この運動に参加したい方は、今すぐ<a href="https://Learnenough.com/email">公式メーリングリストにサインアップをお願いします</a>。
+        『Learn Enough to Be Dangerous』は、技術の成熟（<em>technical sophistication</em>）を世に広める運動のリーダーです。技術の成熟とは、コマンドを魔法のように操ってコンピュータを自在に使いこなすスキルのことです。技術の成熟には、コマンドライン、コーディング、キーボードショートカットの推測、エラーメッセージのググり方、行き詰まったら再起動すべきかどうかの判断など、あらゆるスキルが含まれます。技術の成熟を身につければ、全世界で<strong><em>少なくとも10億人</em></strong>が計り知れない恩恵を受けられると私たちは確信しています。この運動に参加したい方は、今すぐ<a href="https://Learnenough.com/email">公式メーリングリストにサインアップをお願いします</a>。
       </p>
 
       <p>
@@ -27,9 +27,7 @@
       <p>
         ßHTMLは、初代Web「開発者」であるコンピューター科学者<a href="https://ja.wikipedia.org/wiki
         %E3%83%86%E3%82%A3%E3%83%A0%E3%83%BB%E3%83%90%E3%83%BC%E3%83%8A%E3%83%BC%E3%82%BA%EF
-        %BC%9D%E3%83%AA%E3%83%BC">ティム・バーナーズ=リー（Tim Berners-Lee）</a>によって作り出されま
-        した。サー・ティムは自分の猫画像を共有するためにHTMLを発明したという話は冗談ですが、そうだということに
-        しておく方がクールではありませんか？
+        %BC%9D%E3%83%AA%E3%83%BC">ティム・バーナーズ=リー（Tim Berners-Lee）</a>によって作り出されました。サー・ティムは自分の猫画像を共有するためにHTMLを発明したという話は冗談ですが、そうだということにしておく方がクールではありませんか？
       </p>
       <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
       <img src="images/kitten.jpg"  alt="愛くるしい子猫">
