--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <title>Railsチュートリアル「HTML編」</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div>
+    <div id="main-nav" class="nav-menu">
       <a href="index.html">homeページ</a>
-      <a href="moby_dick.html">読書案内『Moby_Dick』</a>
-      <a href="tags.html">HTMLタグ一覧</a>
+      <a href="tags.html" class="nav-spacing">HTMLタグ一覧</a>
+      <a href="moby_dick.html" class="nav-spacing">読書案内『Moby_Dick』</a>
     </div>
     <h1>Learn Enoughのあらまし</h1>
       <p>
@@ -32,6 +33,17 @@
       <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
       <img src="images/kitten.jpg"  alt="愛くるしい子猫">
       </a>
+    <h2>名言</h2>
+      <p>
+        本Webサイトでは、世界中から集めた多くの猫ちゃん動画のほかに、さまざまな名言もふんだんに掲載されています（おそらくここまでやったサイトはないでしょう）。
+      </p>
+      <blockquote style="padding: 2px 20px; background-color: antiquewhite;">
+        <p>
+          <em>インターネット上で見つけた名言をうのみにしてはならない。</em>
+          <br>
+          __エイブラハム・リンカーン（Abraham Lincoln）
+        </p>
+      </blockquote>
 
     <h2>創立までの流れ</h2>
 
