--- a/moby_dick.html
+++ b/moby_dick.html
@@ -5,15 +5,15 @@
     <title>Moby Dick(白鯨)</title>
   </head>
   <body>
-    <div>
-      <a href="index.html">homeページ</a>
-      <a href="moby_dick.html">読書案内『Moby Dick』</a>
-      <a href="tags.html">HTMLタグ一覧</a>
+    <div style="text-align: right;">
+      <a href="index.html" style=" text-decoration: none">homeページ</a>
+      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none">HTMLタグ一覧</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none">読書案内『Moby Dick』</a>
     </div>
-  <!-- スタイルをもっと追加すること（最後のセクションで行う予定）-->
-  <header>
-    <h1>Softcover読書案内</h1>
-    <h2>Moby-Dick(白鯨)</h2>
+
+  <header style="text-align: center; margin: 0 0 80px;">
+    <h1 style="text-align: center;">Softcover読書案内</h1>
+    <h2 style="text-align: center;">Moby-Dick(白鯨)</h2>
   </header>
 
   <div>
@@ -28,16 +28,18 @@
   </div>
 
   <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod/jpg">
-    <img src="images/sperm_whales.jpg" alt="マッコウクジラの群れ"
+    <img src="images/sperm_whales.jpg" style="display: block; margin: 0 auto;"
+    alt="マッコウクジラの群れ">
   </a>
 
-  <div>
+  <div style="width: 560px; margin: 20px auto; padding: 30px;
+  background-color: #fafafa;">
 
     <h3>Moby-Dick（白鯨）:海にまつわる昔話</h3>
 
     <a href="https://www.Softcover.io/read/6070fbo
     03/moby-dick" target="_blank" rel="noopener">
-      <img src="images/moby_dick.png" alt="Moby-Dick（白鯨）">
+      <img src="images/moby_dick.png" alt="Moby-Dick（白鯨）" height="200px" style="float: left; margin:0 40px 0 0;">
     </a>
 
     <p>
@@ -45,9 +47,9 @@
       <em>Moby-Dick</em></a>（白鯨）』は以下の不滅の一文から始まります。
     </p>
 
-    <blockquote>
+    <blockquote style="font-style: italic; font-size: 20px;">
       <p>
-        <span>イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、陸にいても面白くも何ともなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。腹の虫がおさまらんときはそうすることにしとる。
+        <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;">イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、陸にいても面白くも何ともなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。腹の虫がおさまらんときはそうすることにしとる。
       </p>
     </blockquote>
 
@@ -66,7 +68,7 @@
       <h4>『Moby Dick』でその他に気づいた点</h4>
       <ul>
         <li>何章も費やして捕鯨の様子を生き生きと描写している。</li>
-        <li><a href="https://en.wikipedia.org/wiki/Essex_(whaleship)"復讐に怒り狂ったクジラがエセックス号に衝突して沈没した実際の事件</a>を下敷きにしている。</li>
+        <li><a href="https://en.wikipedia.org/wiki/Essex_(whaleship)"復讐に怒り狂ったクジラがエセックス号に衝突して沈没した実際の事件></a>を下敷きにしている。</li>
         <li>船長たちは揃って頭がどうかしているのが笑える。</li>
       </ul>
     </div>
