--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,37 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>Moby Dick(白鯨)</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div style="text-align: right;">
-      <a href="index.html" style=" text-decoration: none">homeページ</a>
-      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none">HTMLタグ一覧</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none">読書案内『Moby Dick』</a>
+    <div id="main-nav" class="nav-menu">
+      <a href="index.html" class="nav-menu">homeページ</a>
+      <a href="tags.html" class="nav-spacing">HTMLタグ一覧</a>
+      <a href="moby_dick.html" class="nav-spacing">読書案内『Moby Dick』</a>
     </div>
 
-  <header style="text-align: center; margin: 0 0 80px;">
-    <h1 style="text-align: center;">Softcover読書案内</h1>
-    <h2 style="text-align: center;">Moby-Dick(白鯨)</h2>
-  </header>
+    <div class="read-nav">
+      <header class="bottom-subject">
+        <h1 class="read-nav">Softcover読書案内</h1>
+        <h2 class="read-nav">Moby-Dick(白鯨)</h2>
+      </header>
+    </div>
+    <div>
+      <p>
+        <a href="https://www.Softcover.io/">Softcover</a>出版プラットフォームは、
+        「<a href="https://railstutorial.jp/">Ruby on Railsチュートリアル</a>」や
+        「<a href="https://railstutorial.jp/html">本書</a>」の原著である
+        「<a href="https://railstutorial.org/book"><em>Ruby on Rails Tutorial
+        </em>book</a>」、「<a href="https://learnenough.com/html">
+        <em>Learn Enough HTML to Be Dangerous</em></a>」の電子書籍版を主な対象として設計されましたが、HermanMelvilleの『<em>Moby-Dick</em>（白鯨、<em>Moby Dick</em>とも）』のような古典書籍の制作にも向いています。はばかりながら、この古典アメリカ文学について愛のある短い読書案内を以下にご紹介いたします。
+      </p>
+    </div>
 
-  <div>
-    <p>
-      <a href="https://www.Softcover.io/">Softcover</a>出版プラットフォームは、
-      「<a href="https://railstutorial.jp/">Ruby on Railsチュートリアル</a>」や
-      「<a href="https://railstutorial.jp/html">本書</a>」の原著である
-      「<a href="https://railstutorial.org/book"><em>Ruby on Rails Tutorial
-      </em>book</a>」、「<a href="https://learnenough.com/html">
-      <em>Learn Enough HTML to Be Dangerous</em></a>」の電子書籍版を主な対象として設計されましたが、HermanMelvilleの『<em>Moby-Dick</em>（白鯨、<em>Moby Dick</em>とも）』のような古典書籍の制作にも向いています。はばかりながら、この古典アメリカ文学について愛のある短い読書案内を以下にご紹介いたします。
-    </p>
-  </div>
+    <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod/jpg">
+      <img src="images/sperm_whales.jpg" style="display: block; margin: 0 auto;"
+      alt="マッコウクジラの群れ">
+    </a>
 
-  <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod/jpg">
-    <img src="images/sperm_whales.jpg" style="display: block; margin: 0 auto;"
-    alt="マッコウクジラの群れ">
-  </a>
-
-  <div style="width: 560px; margin: 20px auto; padding: 30px;
-  background-color: #fafafa;">
+    <div class="outer-frame">
 
     <h3>Moby-Dick（白鯨）:海にまつわる昔話</h3>
 
@@ -47,9 +48,9 @@
       <em>Moby-Dick</em></a>（白鯨）』は以下の不滅の一文から始まります。
     </p>
 
-    <blockquote style="font-style: italic; font-size: 20px;">
+    <blockquote class="head-text">
       <p>
-        <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;">イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、陸にいても面白くも何ともなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。腹の虫がおさまらんときはそうすることにしとる。
+        <span class="red-text">イシュマエルと呼んでくれ。</span>あれは何年か前のことだったかな、当時のわしはすってんてんで、陸にいても面白くも何ともなかったんで、しばらく船に乗って世界中の海を見て回ってやろうと思っとった。腹の虫がおさまらんときはそうすることにしとる。
       </p>
     </blockquote>
 
@@ -68,7 +69,7 @@
       <h4>『Moby Dick』でその他に気づいた点</h4>
       <ul>
         <li>何章も費やして捕鯨の様子を生き生きと描写している。</li>
-        <li><a href="https://en.wikipedia.org/wiki/Essex_(whaleship)"復讐に怒り狂ったクジラがエセックス号に衝突して沈没した実際の事件></a>を下敷きにしている。</li>
+        <li><a href="https://en.wikipedia.org/wiki/Essex_(whaleship)"</a>復讐に怒り狂ったクジラがエセックス号に衝突して沈没した実際の事件>を下敷きにしている。</li>
         <li>船長たちは揃って頭がどうかしているのが笑える。</li>
       </ul>
     </div>
