--- a/tags.html
+++ b/tags.html
@@ -3,12 +3,13 @@
   <head>
     <title>HTMLタグ一覧</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div style="text-align: right;">
-      <a href="index.html" style="text-decoration: none">homeページ</a>
-      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none">HTMLタグ一覧</a>
-      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none">読書案内『Moby Dick』</a>
+    <div id="main-nav" class="nav-menu">
+      <a href="index.html" class="nav-menu">homeページ</a>
+      <a href="tags.html" class="nav-spacing">HTMLタグ一覧</a>
+      <a href="moby_dick.html" class="nav-spacing">読書案内『Moby Dick』</a>
     </div>
 
     <h1>重要なHTMLタグ一覧</h1>
@@ -81,23 +82,28 @@
         </tr>
         <tr>
           <td><code>ol</code></td>
-          <td>順序あるリスト（ol）</td>
-          <td>優先順位のあるリストにする</td>
+          <td>順序付きリスト（ordred list）</td>
+          <td>番号順に表示されるリスト要素</td>
         </tr>
         <tr>
           <td><code>ul</code></td>
-          <td>順不同リスト（ul）</td>
-          <td>箇条書きリストにする</td>
+          <td>順序なしリスト（unordered list）</td>
+          <td>順序が重要でないリスト要素</td>
         </tr>
         <tr>
           <td><code>li</code></td>
-          <td>リスト項目（li）</td>
-          <td>リスト項目を作る</td>
+          <td>リスト項目（list item）</td>
+          <td>リスト項目を囲む（olとulのどちらにも使う）</td>
         </tr>
         <tr>
           <td><code>brockquote</code></td>
           <td>ブロックォート（brockquote）</td>
-          <td>長文の引用・転載文であることを示す</td>
+          <td>長文の引用・転載文の表示</td>
+        </tr>
+        <tr>
+          <td><code>br</code></td>
+          <td>改行（break）</td>
+          <td>改行する</td>
         </tr>  
       </table>
 
@@ -227,3 +233,4 @@
       </table>
   </body>
 </html>
+
